# rust-paymail

./: Cargo.toml  README.md
src/: brfc.rs  lib.rs  server_finder.rs
src/capabilities/: brfc.rs  mod.rs
src/capabilities_finder/: brfc.rs  mod.rs
