[package]
name = "rust-paymail-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bitcoin_hashes = "0.10.0"
hex = "0.4.3"
ureq = { version = "2.3.1", features = ["json"] }
serde_json = "1.0.72"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
srv-rs = { version = "0.2.0", features = ["trust-dns"] }
trust-dns-resolver = "0.20.3"
futures = "0.3.18"